style.css
html {
  scroll-behavior: smooth;
}

html,
body {
  height: 100%;
  width: 100%;
  margin: 0;
}

.full-height {
  height: 100%;
  background: yellow;
}

body {
  background: #20202c;
  color: white;
  justify-content: center;
  font-family: "Montserrat", sans-serif;
}

h1 {
  font-size: 3.5rem;
  margin-bottom: 10%;
}

a {
  color: white;
  text-decoration: none;
}

/* NAV */
.nav {
  display: flex;
  justify-content: flex-end;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 50px;
  z-index: 10;
  background: rgba(0, 0, 0, 0.5);
}

.logo i {
  color: #b2d3eb;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  margin-right: auto;
  margin-left: 2vw;
  font-size: 2rem;
}

.nav-list {
  display: flex;
  margin-left: auto;
  list-style-type: none;
  margin-right: 2vw;
}

.nav-list a {
  display: block;
  font-size: 1.25rem;
  padding: 1.25rem;
}

.nav-list a:hover {
  color: #9dd9f3;
}

.nav-list a::after {
  content: "";
  display: block;
  width: 0;
  height: 2px;
  color: #9dd9f3;
  background: #9dd9f3;
  transition: width 0.3s;
}

.nav-list a:hover::after {
  width: 100%;
  transition: width 0.3s;
}

.nav-list #nav-about:hover {
  color: #b2d3eb;
}

.nav-list #nav-about::after {
  content: "";
  display: block;
  width: 0;
  height: 2px;
  color: #b2d3eb;
  background: #b2d3eb;
  transition: width 0.3s;
}

.nav-list #nav-about:hover::after {
  width: 100%;
  transition: width 0.3s;
}

.nav-list #nav-projects:hover {
  color: #8dbdd8;
}

.nav-list #nav-projects::after {
  content: "";
  display: block;
  width: 0;
  height: 2px;
  color: #8dbdd8;
  background: #8dbdd8;
  transition: width 0.3s;
}

.nav-list #nav-projects:hover::after {
  width: 100%;
  transition: width 0.3s;
}

.nav-list #nav-tech:hover {
  color: #68a7ca;
}

.nav-list #nav-tech::after {
  content: "";
  display: block;
  width: 0;
  height: 2px;
  color: #68a7ca;
  background: #68a7ca;
  transition: width 0.3s;
}

.nav-list #nav-tech:hover::after {
  width: 100%;
  transition: width 0.3s;
}

.nav-list #nav-contact:hover {
  color: #4390bc;
}

.nav-list #nav-contact::after {
  content: "";
  display: block;
  width: 0;
  height: 2px;
  color: #4390bc;
  background: #4390bc;
  transition: width 0.3s;
}

.nav-list #nav-contact:hover::after {
  width: 100%;
  transition: width 0.3s;
}

/* Introduction Page */

.page-container {
  min-height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.container {
  justify-content: center;
  white-space: nowrap;
}

.common-links {
  display: flex;
  flex-direction: row;
  color: white;
  padding-top: 5.5%;
  width: 30%;
  font-size: 2.25rem;
  justify-content: space-around;
}

.typewriter h2 {
  font-size: 2rem;
  color: #b2d3eb;
  overflow: hidden; /* Ensures the content is not revealed until the animation */
  border-right: 0.15em solid #b2d3eb; /* The typwriter cursor */
  white-space: nowrap; /* Keeps the content on a single line */
  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
  letter-spacing: 0.25em; /* Adjust as needed */
  animation: typing 3s steps(40, end), blink-caret 0.75s step-end infinite;
}

/* The typing effect */
@keyframes typing {
  from {
    width: 0;
  }
  to {
    width: 100%;
  }
}

/* The typewriter cursor effect */
@keyframes blink-caret {
  from,
  to {
    border-color: transparent;
  }
  50% {
    border-color: #add8e6;
  }
}

.expand:hover {
  transform: scale(1.5);
  transition: 0.5s;
  cursor: hand;
}

.tooltip {
  position: relative;
  display: inline-block;
  border-bottom: 1px dotted black;
}

.tooltip .tooltiptext {
  visibility: hidden;
  width: 120px;
  background-color: #add8e6;
  color: black;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;

  /* Position the tooltip */
  position: absolute;
  z-index: 1;
}

.tooltip .tooltiptext {
  visibility: hidden;
  width: 200px;
  background-color: #add8e6;
  font-size: 1rem;
  color: black;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;

  /* Position the tooltip */
  position: absolute;
  z-index: 1;
}

.tooltip:hover .tooltiptext {
  visibility: visible;
}

.tooltip .tooltiptext {
  width: 120px;
  top: 120%;
  left: 50%;
  margin-left: -60px; /* Use half of the width (120/2 = 60), to center the tooltip */
}
.tooltip .tooltiptext::after {
  content: " ";
  position: absolute;
  bottom: 100%; /* At the top of the tooltip */
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent #add8e6 transparent;
}

/* About Page */
.page-container-row {
  min-height: 100%;

  display: flex;
  align-items: center;
  align-contents: center;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
}

#columnOne {
  width: 50%;
  padding-left: 5%;
}

#columnTwo {
  width: 25%;
  padding-right: 5%;
}

#columnTwo img {
  height: 80%;
  width: 80%;
}

#columnOne h2 {
  border-bottom: solid 2px #b2d3eb;
}

.page-container-row h3 {
  text-align: left;
}

.page-container-row p {
  margin-left: 2vw;
}
/* Projects Page */

.project-text {
  width: 60%;
  color: white;
  align-items: center;
  text-align: center;
  flex-direction: column;
  padding-bottom: 3vh;
  margin-top: 45px;
  font-size: 1rem;
}

.project-text h2 {
  border-bottom: solid 2px #8dbdd8;
  text-align: center;
  font-size: 1.6rem;
}

.project-text h3 {
  font-size: 1rem;
}

.card-container {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  width: 90%;
  height: auto;
}

.cards {
  padding: 0.5%;
  background-color: #17141d;
  border-radius: 5px;
  margin-bottom: 1%;
  transition: 0.4s ease-out;
  position: relative;
  left: 0px;
  -moz-box-shadow: 1px 1px 2px 2px #000;
  -webkit-box-shadow: 1px 1px 2px 2px #000;
  box-shadow: 1px 1px 2px 2px #000;
}

.cards h3 {
  font-size: 0.9rem;
  text-transform: uppercase;
  display: inline-block;
  float: left;
}
/* ... */

